# recall

./: Cargo.toml  README.md  c.result  package-lock.json  package.json
src/: App.tsx  main.rs  utils.rs
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  model.rs
src-tauri/src/parser/: RelativizedCL.pest  ast_builder.rs  ast_builder_test_conflict.rs  mod.rs  parser.rs
src/algorithms/: action_extractor.rs  automata_constructor.rs  clause_decomposer.rs  conflict_searcher.rs  mod.rs
src/assets/contracts/: contract001.rcl  contract020.rcl  contract020.result  contract050.rcl  contract060.rcl  contract069.rcl  contract070.rcl  contract090.rcl  contract090.result  estudo_de_caso_correct_2.rcl  the_matrix_2.rcl
src/assets/contracts/08/: contract090.rcl
src/model/: actions.rs  automata.rs  contracts.rs  mod.rs
src/parser/: RelativizedCL.pest  ast_builder.rs  mod.rs
