[package]
name = "recall"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "recall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
antlr-rust = "0.3.0-beta"

[dependencies]
tauri-plugin-dialog = { package = "tauri-plugin-dialog", version = "2" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
dyn-clone = "1"
pest = "2.6"
pest_derive = "2.6"
thiserror = "2"
